Fix alignment of icon

--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -30,7 +30,6 @@ section {
 }
 .footer {
   width: 100%;
-  margin-inline: auto;
   width: var(--section-width);
   padding: 4rem 0 2rem 0;
   text-align: center;
